testing/ui/fail/duplicate_symlink.rs
fn main() {}

dotinstall::installer! {
    symlinks {
        "foo" => "bar",
        "foo" => "baz",
    };
}
