testing/ui/fail/duplicate_symlink.stderr
error: Duplicate symlink for `foo`
 --> testing/ui/fail/duplicate_symlink.rs:6:9
  |
6 |         "foo" => "baz",
  |         ^^^^^
